--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
+    "universal-cookie": "^4.0.4",
     "zod": "^3.21.4"
   }
 }
