--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "typescript": "5.0.4",
     "universal-cookie": "^4.0.4",
     "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@rocketseat/eslint-config": "^1.2.0"
   }
 }
