--- a/package.json
+++ b/package.json
@@ -11,18 +11,21 @@
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
     "@hookform/resolvers": "^3.1.0",
+    "@prisma/client": "^4.14.0",
     "@types/node": "20.1.1",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "lucide-react": "^0.218.0",
     "next": "13.4.1",
     "phosphor-react": "^1.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
+    "server-only": "^0.0.1",
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
@@ -30,6 +33,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@rocketseat/eslint-config": "^1.2.0"
+    "@rocketseat/eslint-config": "^1.2.0",
+    "prisma": "^4.14.0"
   }
 }
