--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "projects",
   "version": "0.1.0",
+  "builds": [{ "src": "package.json", "use": "@vercel/next" }],
   "private": true,
   "scripts": {
     "dev": "next dev",
