--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emailjs/browser": "^3.11.0",
     "@hookform/resolvers": "^3.1.0",
     "@prisma/client": "^4.14.1",
     "@types/node": "20.1.1",
+    "@types/nodemailer": "^6.4.7",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
@@ -26,6 +26,7 @@
     "eslint-config-next": "13.4.1",
     "lucide-react": "^0.218.0",
     "next": "13.4.1",
+    "nodemailer": "^6.9.2",
     "phosphor-react": "^1.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
@@ -35,7 +36,6 @@
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4",
-    "universal-cookie": "^4.0.4",
     "zod": "^3.21.4"
   },
   "devDependencies": {
