--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/nodemailer": "^6.4.7",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
+    "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
