--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
     "@hookform/resolvers": "^3.1.0",
     "@prisma/client": "^4.14.1",
     "@types/node": "20.1.1",
