--- a/package.json
+++ b/package.json
@@ -19,16 +19,16 @@
     "@hookform/resolvers": "^3.1.0",
     "@prisma/client": "^4.14.1",
     "@types/node": "20.1.1",
-    "@types/nodemailer": "^6.4.7",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "10.4.14",
+    "classnames": "^2.3.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
+    "framer-motion": "^10.12.16",
     "lucide-react": "^0.218.0",
     "next": "13.4.1",
-    "nodemailer": "^6.9.2",
     "phosphor-react": "^1.4.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
