--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "server-only": "^0.0.1",
     "sharp": "^0.32.1",
     "tailwindcss": "3.3.2",
+    "twin.macro": "^3.3.1",
     "typescript": "5.0.4",
     "zod": "^3.21.4"
   },
